--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tailwindcss/vite": "^4.1.13",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.19",
 		"formsnap": "^2.0.1",
 		"svelte": "^5.39.5",
 		"svelte-check": "^4.3.2",
